# fish-history-merger

./: .gitignore  ChangeLog.md  README.md  fish-history-parser.cabal  package.yaml  project.cabal  project.nix  release.nix  stack.yaml
app/: Main.hs
src/: Lib.hs
