name: fish-history-merger
version: 0.1.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/afreakk/fish-history-merger

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , deepseq
  default-language: Haskell2010

executable fish-history-merger
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , fish-history-merger
    , containers
  default-language: Haskell2010

test-suite fish-history-merger-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , fish-history-merger
  default-language: Haskell2010
